[project]
name = "prescryb"
version = "0.1.0"
description = "MCP server for CVE/config remediation orchestration: SSH inventory, OSV/NVD lookups, CIS/DISA STIG-mapped Ansible playbook suggestions."
readme = "README.md"
authors = [
    { name = "Thomas Sjögren", email = "konstruktoid@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.28.1",
    "paramiko>=5.0.0",
    "pyyaml>=6.0.3",
]

[project.scripts]
prescryb = "prescryb.server:main"

[project.optional-dependencies]
test = [
    "ruff>=0.15.21",
    "ty>=0.0.57",
]

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812", # conflicts with ruff format's trailing-comma handling
    "D203",   # incompatible with D211 (no-blank-line-before-class), which we use instead
    "D213",   # incompatible with D212 (multi-line-summary-first-line), which we use instead
]

[tool.ruff.lint.pylint]
# ssh.connect() and the inventory_host MCP tool each mirror `ssh`'s CLI
# flags (host/user/port/hostname/identity_file/trust flag/timeout); splitting
# that into a config object would be worse than the default 5-arg cap.
max-args = 8
